--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@prisma/client": "^4.14.1",
+		"@skeletonlabs/skeleton": "^1.7.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/mqtt": "^2.5.0",
