--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"chalk": "^5.2.0",
-		"mqtt": "^4.0.1"
+		"mqtt": "^4.0.1",
+		"prettier-plugin-tailwindcss": "^0.3.0"
 	}
 }
