:construction: Software logic ongoing

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chartjs-plugin-zoom": "^2.0.1",
     "mqtt": "^4.0.1",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "svelte-chartjs": "^3.0.0"
+    "svelte-chartjs": "^3.0.0",
+    "xstate": "^4.38.3"
   }
 }
