--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@prisma/client": "^5.6.0",
     "@skeletonlabs/skeleton": "^2.5.1",
+    "@skeletonlabs/tw-plugin": "^0.2.4",
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.27.6",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -39,7 +40,7 @@
     "chalk": "^5.3.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
-    "mqtt": "^5.3.1",
+    "mqtt": "^4.0.1",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "svelte-chartjs": "^3.1.2",
     "xstate": "^5.0.0"
