--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/kit": "^1.27.6",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
+    "@xstate/svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
