--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "gsap": "^3.12.3",
     "layercake": "^8.0.2",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
