--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^6.13.1",
     "@xstate/svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
+    "clsx": "^2.0.0",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
@@ -32,6 +33,7 @@
     "prisma": "^5.6.0",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
