--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@skeletonlabs/tw-plugin": "^0.2.4",
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.27.6",
+    "@types/better-sqlite3": "^7.6.8",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@xstate/svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
+    "drizzle-kit": "^0.20.10",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
@@ -39,9 +41,11 @@
   },
   "type": "module",
   "dependencies": {
+    "better-sqlite3": "^9.2.2",
     "chalk": "^5.3.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "drizzle-orm": "^0.29.3",
     "mqtt": "^4.0.1",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "svelte-chartjs": "^3.1.2",
