--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,10 @@
 {
   "singleQuote": true,
-  "trailingComma": "none",
   "tabWidth": 2,
-  "pluginSearchDirs": ["."],
-  "overrides": [
-    {
-      "files": "*.svelte",
-      "options": {
-        "parser": "svelte"
-      }
-    }
-  ]
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false,
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+  "jsxBracketSameLine": true,
+  "htmlWhitespaceSensitivity": "ignore",
+  "bracketSameLine": true
 }
