--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.27.6",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@xstate/svelte": "^3.0.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-svelte": "^2.35.1",
     "gsap": "^3.12.3",
     "layercake": "^8.0.2",
+    "papaparse": "^5.4.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
     "prettier-plugin-svelte": "^3.1.2",
