--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
     "tailwind-merge": "^2.1.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.2",
@@ -44,13 +45,18 @@
   "type": "module",
   "dependencies": {
     "better-sqlite3": "^9.2.2",
+    "bits-ui": "^0.18.6",
     "chalk": "^5.3.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "drizzle-orm": "^0.29.3",
+    "lucide-svelte": "^0.344.0",
     "mqtt": "^4.0.1",
+    "paneforge": "^0.0.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "svelte-chartjs": "^3.1.2",
+    "tailwind-variants": "^0.2.0",
+    "vaul-svelte": "^0.2.4",
     "xstate": "^5.0.0"
   }
 }
