--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@unovis/svelte": "^1.3.5",
+    "add": "^2.0.6",
     "better-sqlite3": "^9.2.2",
     "bits-ui": "^0.18.6",
     "chalk": "^5.3.0",
