--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@skeletonlabs/skeleton": "^2.5.1",
     "@skeletonlabs/tw-plugin": "^0.2.4",
     "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/adapter-node": "^5.0.1",
     "@sveltejs/kit": "^1.27.6",
     "@types/better-sqlite3": "^7.6.8",
     "@types/papaparse": "^5.3.14",
@@ -56,6 +57,9 @@
     "mqtt": "^4.0.1",
     "paneforge": "^0.0.2",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "serialport": "^12.0.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "svelte-chartjs": "^3.1.2",
     "svelte-sonner": "^0.3.19",
     "tailwind-variants": "^0.2.0",
