--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@serialport/parser-readline": "^12.0.0",
     "@unovis/svelte": "^1.3.5",
     "better-sqlite3": "^9.2.2",
     "bits-ui": "^0.18.6",
