--- a/package.json
+++ b/package.json
@@ -12,59 +12,54 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@skeletonlabs/skeleton": "^2.5.1",
-    "@skeletonlabs/tw-plugin": "^0.2.4",
-    "@sveltejs/adapter-auto": "^2.1.1",
+    "@skeletonlabs/skeleton": "^2.9.0",
+    "@skeletonlabs/tw-plugin": "^0.3.1",
+    "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/adapter-node": "^5.0.1",
-    "@sveltejs/kit": "^1.27.6",
-    "@types/better-sqlite3": "^7.6.8",
+    "@sveltejs/kit": "^2.5.4",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/papaparse": "^5.3.14",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@xstate/svelte": "^3.0.0",
-    "autoprefixer": "^10.4.16",
-    "clsx": "^2.0.0",
-    "drizzle-kit": "^0.20.10",
-    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@xstate/svelte": "^3.0.2",
+    "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "gsap": "^3.12.3",
-    "layercake": "^8.0.2",
+    "gsap": "^3.12.5",
     "papaparse": "^5.4.1",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.0",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "tailwind-merge": "^2.1.0",
+    "postcss": "^8.4.36",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
+    "svelte": "^4.2.12",
+    "svelte-check": "^3.6.7",
+    "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4"
+    "typescript": "^5.4.2",
+    "vite": "^5.1.6"
   },
   "type": "module",
   "dependencies": {
     "@serialport/parser-readline": "^12.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@unovis/svelte": "^1.3.5",
-    "better-sqlite3": "^9.2.2",
-    "bits-ui": "^0.18.6",
+    "better-sqlite3": "^9.4.3",
+    "bits-ui": "^0.19.7",
     "chalk": "^5.3.0",
-    "chart.js": "^4.4.0",
-    "chartjs-plugin-zoom": "^2.0.1",
-    "drizzle-orm": "^0.29.3",
-    "lucide-svelte": "^0.344.0",
+    "drizzle-orm": "^0.30.2",
+    "lucide-svelte": "^0.358.0",
     "mode-watcher": "^0.3.0",
-    "mqtt": "^4.0.1",
     "paneforge": "^0.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.7",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "serialport": "^12.0.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "svelte-chartjs": "^3.1.2",
     "svelte-sonner": "^0.3.19",
-    "tailwind-variants": "^0.2.0",
-    "vaul-svelte": "^0.2.4",
-    "xstate": "^5.0.0"
+    "tailwind-variants": "^0.2.1",
+    "vaul-svelte": "^0.3.0"
   }
 }
