--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "type": "module",
   "dependencies": {
+    "mqtt": "^4.0.1",
     "@serialport/parser-readline": "^12.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@unovis/svelte": "^1.3.5",
