--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "@vite-pwa/assets-generator": "^0.2.4",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
     "drizzle-kit": "^0.20.14",
@@ -54,6 +55,7 @@
     "mqtt": "^4.0.1",
     "paneforge": "^0.0.2",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "remove": "^0.1.5",
     "svelte-sonner": "^0.3.22",
     "tailwind-variants": "^0.2.1",
     "vaul-svelte": "^0.3.0"
