--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
+    "dev": "WEBKIT_DISABLE_COMPOSITING_MODE=1 pnpm run tauri dev",
+    "build": "WEBKIT_DISABLE_COMPOSITING_MODE=1 pnpm run tauri build",
+    "tauri": "tauri",
+    "sveltekit:dev": "vite dev",
+    "sveltekit:build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1",
-    "@sveltejs/adapter-node": "^5.0.1",
+    "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/kit": "^2.5.4",
+    "@tauri-apps/cli": "^1.5.13",
     "@types/better-sqlite3": "^7.6.9",
     "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "@vite-pwa/assets-generator": "^0.2.4",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
-    "gsap": "^3.12.5",
     "lucide-svelte": "^0.358.0",
     "mode-watcher": "^0.3.0",
     "nanoid": "^5.0.7",
@@ -47,6 +48,7 @@
   "dependencies": {
     "@serialport/parser-readline": "^12.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@tauri-apps/api": "^1.5.4",
     "@unovis/svelte": "^1.3.5",
     "better-sqlite3": "^9.4.3",
     "bits-ui": "^0.19.7",
