--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "WEBKIT_DISABLE_COMPOSITING_MODE=1 pnpm run tauri dev",
-    "build": "WEBKIT_DISABLE_COMPOSITING_MODE=1 pnpm run tauri build",
-    "tauri": "tauri",
-    "sveltekit:dev": "vite dev",
-    "sveltekit:build": "vite build",
+    "dev": "vite dev",
+    "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
@@ -16,49 +13,49 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.4",
-    "@tauri-apps/cli": "^1.5.13",
-    "@types/better-sqlite3": "^7.6.9",
+    "@sveltejs/kit": "^2.5.7",
+    "@types/better-sqlite3": "^7.6.10",
     "@types/papaparse": "^5.3.14",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "autoprefixer": "^10.4.18",
-    "clsx": "^2.1.0",
-    "drizzle-kit": "^0.20.14",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "drizzle-kit": "^0.20.18",
+    "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "lucide-svelte": "^0.358.0",
+    "eslint-plugin-svelte": "^2.38.0",
+    "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
     "nanoid": "^5.0.7",
     "papaparse": "^5.4.1",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-svelte": "^3.2.2",
-    "svelte": "^4.2.12",
-    "svelte-check": "^3.6.7",
-    "tailwind-merge": "^2.2.2",
+    "prettier-plugin-svelte": "^3.2.3",
+    "svelte": "^4.2.16",
+    "svelte-check": "^3.7.1",
+    "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   },
   "type": "module",
   "dependencies": {
     "@serialport/parser-readline": "^12.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tauri-apps/api": "^1.5.4",
-    "@unovis/svelte": "^1.3.5",
-    "better-sqlite3": "^9.4.3",
-    "bits-ui": "^0.19.7",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@unovis/svelte": "^1.4.0",
+    "@unovis/ts": "^1.4.0",
+    "better-sqlite3": "^9.6.0",
+    "bits-ui": "^0.21.7",
     "chalk": "^5.3.0",
-    "drizzle-orm": "^0.30.2",
+    "drizzle-orm": "^0.30.10",
+    "gsap": "^3.12.5",
     "mqtt": "^4.0.1",
-    "paneforge": "^0.0.2",
-    "prettier-plugin-tailwindcss": "^0.5.12",
+    "paneforge": "^0.0.4",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "remove": "^0.1.5",
-    "svelte-sonner": "^0.3.22",
+    "svelte-sonner": "^0.3.24",
     "tailwind-variants": "^0.2.1",
     "vaul-svelte": "^0.3.0"
   }
