--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.20.18",
+    "echarts": "^5.5.0",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.38.0",
