--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier-plugin-svelte": "^3.2.3",
     "svelte": "^4.2.16",
     "svelte-check": "^3.7.1",
+    "svelte-tiny-virtual-list": "^2.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3",
