--- a/package.json
+++ b/package.json
@@ -9,22 +9,24 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
-    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/kit": "^2.5.8",
     "@types/better-sqlite3": "^7.6.10",
     "@types/papaparse": "^5.3.14",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.20.18",
+    "drizzle-kit": "^0.21.2",
     "echarts": "^5.5.0",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.38.0",
+    "eslint-plugin-svelte": "^2.39.0",
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
     "nanoid": "^5.0.7",
@@ -32,7 +34,7 @@
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
-    "svelte": "^4.2.16",
+    "svelte": "^4.2.17",
     "svelte-check": "^3.7.1",
     "svelte-tiny-virtual-list": "^2.1.0",
     "tailwind-merge": "^2.3.0",
@@ -46,7 +48,7 @@
   "dependencies": {
     "@serialport/parser-readline": "^12.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
-    "better-sqlite3": "^9.6.0",
+    "better-sqlite3": "^10.0.0",
     "bits-ui": "^0.21.7",
     "chalk": "^5.3.0",
     "drizzle-orm": "^0.30.10",
